Add menu and style button

--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,56 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:100,300,400,500,700|Roboto:100,300,400,500,700,900');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 html {
   --background: #222;
   --color: #fff;
+  --color-active: #fff4;
 }
 
 html[data-style="light"] {
   --background: #fff;
   --color: #333;
+  --color-active: #3334;
 }
 
 html[data-style="amoled"] {
   --background: #000;
   --color: #eee;
+  --color-active: #eee4;
 }
 
 body {
   background-color: var(--background);
   margin: 0;
   overflow: hidden;
+}
+
+#menu {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  padding: 4px;
+}
+
+#menu button {
+  padding: 0;
+  display: inline-block;
+  border: none;
+  outline: none;
+  background: none;
+  color: var(--color);
+  background-color: transparent;
+  border-radius: 50%;
+  transition: color 500ms, background 300ms;
+  width: 32px;
+  height: 32px;
+  padding: 4px;
+  margin: 4px;
+  cursor: pointer;
+}
+
+#menu button:focus, #menu button:hover {
+  background-color: var(--color-active);
 }
 
 #loading {
