Add cursor auto hiding after 5 seconds

--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,10 @@ html[data-style="amoled"] {
   --color-active: #eee4;
 }
 
+html.hide-cursor {
+  cursor: none;
+}
+
 body {
   background-color: var(--background);
   transition: background-color 500ms;
